[project]
name = "social-media-sentiment-analysis-bert"
version = "0.1.0"
description = "BERT-based sentiment analysis for social media"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.20.0",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "wandb>=0.15.0",
    "tweepy>=4.14.0",
    "nltk>=3.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pytest>=7.3.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]

